--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="header">
         <div class="headerTopSec">
             <img class="searchIcon" src="images/magnify.svg">
-            <input type="text" class="searchBar">
+            <input type="text" class="searchBar" placeholder="Search...">
             <img class="notif" src = "images/bell.svg">
             <img class="miniProfIcon" src = "images/pfp.jpeg">
             <div class="username">John Smith</div>
